--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "flexboxgrid": "^6.3.1",
+    "ngp-image-picker": "^1.4.0",
+    "ngx-icon-picker": "^1.6.0",
     "ngx-quicklink": "^0.2.7",
+    "resize-observer": "^1.0.0",
     "rxjs": "~6.5.5",
+    "simple-css-grid": "^1.4.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
