--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@swimlane/ngx-charts": "^17.0.1",
     "flexboxgrid": "^6.3.1",
+    "moment": "^2.29.1",
     "ngp-image-picker": "^1.4.0",
     "ngx-icon-picker": "^1.6.0",
     "ngx-quicklink": "^0.2.7",
