--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "flexboxgrid": "^6.3.1",
     "ngp-image-picker": "^1.4.0",
+    "ngx-editor": "^8.1.1",
     "ngx-icon-picker": "^1.6.0",
     "ngx-quicklink": "^0.2.7",
     "resize-observer": "^1.0.0",
