--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@swimlane/ngx-charts": "^17.0.1",
     "express": "^4.17.1",
     "flexboxgrid": "^6.3.1",
+    "moment": "^2.29.1",
     "ngp-image-picker": "^1.4.0",
     "ngx-editor": "^8.1.1",
     "ngx-icon-picker": "^1.6.0",
